--- a/app/src/main/res/menu/navigation_parts.xml
+++ b/app/src/main/res/menu/navigation_parts.xml
@@ -5,18 +5,18 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="Search"
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="Download"
         />
 
     <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="My Courses" />
+        android:title="Downloaded" />
 
-    <item
+   <!--<item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="My TimeTable" />
+        android:title="My TimeTable" />-->
 
 </menu>
