--- a/app/src/main/res/menu/navigation_parts.xml
+++ b/app/src/main/res/menu/navigation_parts.xml
@@ -5,13 +5,13 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="Download"
+        android:icon="@drawable/pending_all"
+        android:title="ALL"
         />
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/downloaded"
         android:title="Downloaded" />
 
    <!--<item
